log/build_2023-09-15_23-48-43/hw1_py_pubsub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/rooney_subscriber.py", line 26
    self.get_logger().info("I recieved %s. It is an %s number." % num evenodd)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

